Aggiornate le stringhe in italiano

--- a/ckanext/shibboleth/i18n/it/LC_MESSAGES/ckanext-shibboleth.po
+++ b/ckanext/shibboleth/i18n/it/LC_MESSAGES/ckanext-shibboleth.po
@@ -24,19 +24,19 @@ msgstr "Non sono state ricevute informazioni sull'utente"
 
 #: ckanext/repoze/who/shibboleth/templates/user/snippets/login_form.html:25
 msgid "Shibboleth"
-msgstr "Shibboleth"
+msgstr "SPID"
 
 #: ckanext/repoze/who/shibboleth/templates/user/snippets/login_form.html:26
 msgid "Login through Shibboleth."
-msgstr "Accedi attraverso Shibboleth"
+msgstr "Accedi attraverso SPID"
 
 #: ckanext/repoze/who/shibboleth/templates/user/snippets/login_form.html:33
 msgid "Login via Shibboleth"
-msgstr "Accedi attraverso Shibboleth"
+msgstr "Accedi attraverso SPID"
 
 #: ckanext/repoze/who/shibboleth/templates/user/snippets/login_form.html:45
 msgid "Authentication by using local account"
-msgstr "Autenticazione con account locale"
+msgstr "Autenticazione con account amministratore"
 
 #: ckanext/repoze/who/shibboleth/templates/user/snippets/login_form.html:49
 msgid "Username"
